--- a/article-preview-component/scss/base/_reset.scss
+++ b/article-preview-component/scss/base/_reset.scss
@@ -1,28 +1,52 @@
-*, *::before, *::after {
+/* Modern CSS Reset */
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-html {
+/* Set core root defaults */
+html:focus-within {
   scroll-behavior: smooth;
 }
 
+/* Set core body defaults */
 body {
   min-height: 100vh;
-  line-height: 1.5;
   text-rendering: optimizeSpeed;
+  line-height: 1.5;
+  background-color: var(--color-grey-200);
 }
 
-img, picture, svg {
+/* Make images easier to work with */
+img {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 
-input, button, textarea, select {
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
   font: inherit;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  overflow-wrap: break-word;
+/* Remove all animations and transitions for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
 }
