--- a/article-preview-component/scss/components/_card.scss
+++ b/article-preview-component/scss/components/_card.scss
@@ -18,7 +18,15 @@
   }
 
   @include m.break-up(md) {
-    grid-template-columns: minmax(285px, 1fr) minmax(445px, 1.5fr);
+    grid-template-columns: minmax(240px, 0.45fr) minmax(287px, 0.55fr);
+  }
+
+  @include m.break-up(lg) {
+    grid-template-columns: minmax(285px, 0.45fr) minmax(350px, 0.55fr);
+  }
+
+  @include m.break-up(xl) {
+    grid-template-columns: 309px 421px; // Precise columns for 730px total at 1440px
   }
 
   &__image {
@@ -26,6 +34,11 @@
     
     @include m.break-up(md) {
       height: 100%;
+    }
+
+    @include m.break-up(lg) {
+      height: 100%;
+      min-height: calc(map.get(v.$spacing, 1400) * 2.5);
     }
 
     img {
@@ -44,6 +57,14 @@
     @include m.break-up(md) {
       padding: map.get(v.$spacing, 400);
     }
+
+    @include m.break-up(lg) {
+      padding: map.get(v.$spacing, 800);
+    }
+
+    @include m.break-up(xl) {
+      padding: map.get(v.$spacing, 1000) map.get(v.$spacing, 800);
+    }
   }
 
   &__footer {
@@ -53,6 +74,11 @@
     margin-top: auto;
     padding-top: map.get(v.$spacing, 200);
     position: relative;
+
+    @include m.break-up(lg) {
+      padding-top: map.get(v.$spacing, 400);
+      gap: map.get(v.$spacing, 300);
+    }
   }
 }
 
@@ -60,4 +86,8 @@
   display: flex;
   flex-direction: column;
   gap: map.get(v.$spacing, 100);
+
+  @include m.break-up(lg) {
+    gap: map.get(v.$spacing, 200);
+  }
 }
