--- a/article-preview-component/scss/abstracts/_variables.scss
+++ b/article-preview-component/scss/abstracts/_variables.scss
@@ -37,7 +37,7 @@ $spacing: (
   --font-weight-bold: 700;
   
   // Layout
-  --card-max-width: 45.625rem; // 730px
+  --card-max-width: 60rem; // Increased from 45.625rem (730px) to 60rem (960px)
   --card-border-radius: 0.625rem; // 10px
   
   // Transitions
