--- a/article-preview-component/scss/layouts/_main.scss
+++ b/article-preview-component/scss/layouts/_main.scss
@@ -6,18 +6,22 @@
   min-height: 100vh;
   display: grid;
   place-items: center;
-  padding: map.get(v.$spacing, 800);
+  padding: map.get(v.$spacing, 800) map.get(v.$spacing, 400);
   background: var(--color-grey-200);
   perspective: 1000px;
   overflow-x: hidden;
 
   @include m.break-up(md) {
-    padding: map.get(v.$spacing, 1400) map.get(v.$spacing, 1000);
+    padding: map.get(v.$spacing, 1400) map.get(v.$spacing, 800);
   }
 
+  @include m.break-up(lg) {
+    padding: map.get(v.$spacing, 1400) map.get(v.$spacing, 1000);
+  }
+  
   @include m.break-up(xl) {
     padding: map.get(v.$spacing, 1400) 0;
-    max-width: 1440px;
+    max-width: 1540px; // Increased to accommodate wider card
     margin: 0 auto;
   }
 }
