--- a/article-preview-component/scss/style.scss
+++ b/article-preview-component/scss/style.scss
@@ -1,7 +1,13 @@
-@use 'abstracts/variables' as v;
-@use 'abstracts/mixins' as m;
+// Main style file with imports
+@use 'abstracts/variables';
+@use 'abstracts/mixins';
+
 @use 'base/reset';
+@use 'base/root';
 @use 'base/typography';
-@use 'layouts/main';
+@use 'base/utilities';
+
 @use 'components/card';
-@use 'components/buttons';
+@use 'components/share';
+
+@use 'layouts/container';
