--- a/article-preview-component/scss/base/_typography.scss
+++ b/article-preview-component/scss/base/_typography.scss
@@ -1,18 +1,16 @@
 @use '../abstracts/variables' as v;
 @use '../abstracts/mixins' as m;
-@use 'sass:map';
 
 body {
-  font-family: var(--font-family-primary);
-  font-weight: var(--font-weight-medium);
-  color: var(--color-grey-900);
-  @include m.fluid-type(0.875rem, 1rem);
+  font-family: v.$font-family-primary;
+  font-weight: v.$font-weight-medium;
+  color: v.$color-grey-900;
   line-height: 1.5;
 }
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 1.2;
-  font-weight: 700;
+  font-weight: v.$font-weight-bold;
 }
 
 p {
@@ -21,44 +19,50 @@ p {
 
 .card {
   &__title {
-    @include m.fluid-type(1.125rem, 1.5rem);
-    line-height: 1.3;
-    letter-spacing: 0.25px;
-    font-weight: var(--font-weight-bold);
-    margin-bottom: map.get(v.$spacing, 300);
+    font-size: v.$font-size-title;
+    line-height: v.$line-height-title;
+    letter-spacing: v.$letter-spacing-title;
+    font-weight: v.$font-weight-bold;
+    color: v.$color-grey-900;
+    margin-bottom: v.$spacing-200;
   }
 
   &__paragraph {
-    @include m.fluid-type(0.875rem, 1rem);
-    line-height: 1.6;
-    letter-spacing: 0.12px;
-    color: var(--color-grey-500);
-    margin-bottom: map.get(v.$spacing, 400);
+    font-size: v.$font-size-body;
+    line-height: v.$line-height-body;
+    letter-spacing: v.$letter-spacing-body;
+    font-weight: v.$font-weight-medium;
+    color: v.$color-grey-500;
+    margin-bottom: v.$spacing-300;
   }
 }
 
 .user-info {
   &__name {
-    @include m.fluid-type(0.875rem, 1rem);
-    font-weight: var(--font-weight-bold);
-    line-height: 1.4;
-    letter-spacing: 0.12px;
+    font-size: v.$font-size-body;
+    line-height: v.$line-height-body;
+    letter-spacing: v.$letter-spacing-body;
+    font-weight: v.$font-weight-bold;
+    color: v.$color-grey-900;
+    display: block;
   }
 
   &__date {
-    @include m.fluid-type(0.8125rem, 0.875rem);
-    color: var(--color-grey-500);
-    line-height: 1.4;
-    letter-spacing: 0.12px;
+    font-size: v.$font-size-body;
+    line-height: v.$line-height-body;
+    letter-spacing: v.$letter-spacing-body;
+    font-weight: v.$font-weight-medium;
+    color: v.$color-grey-500;
+    display: block;
   }
 }
 
 .share-popup {
   &__text {
-    @include m.fluid-type(0.8125rem, 0.875rem);
-    letter-spacing: 0.25px;
     text-transform: uppercase;
-    color: var(--color-grey-400);
-    font-weight: var(--font-weight-bold);
+    font-size: v.$font-size-body;
+    letter-spacing: v.$letter-spacing-share;
+    font-weight: v.$font-weight-medium;
+    color: v.$color-grey-400;
   }
 }
